# beerbox-slack

./: .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  openapi.yaml  pyproject.toml
.github/workflows/: commits.yaml  lint_codebase.yaml  lint_pull_request.yaml  main.yaml  pull_request.yaml  release.yaml
scripts/: init  lib.py  lint-codebase  lint-commit  serve
scripts/hooks/: commit-msg  pre-commit
src/slackbox/: config.py  main.py
src/slackbox/application/: health.py
src/slackbox/application/api/: app.py  exception_handlers.py  response.py
src/slackbox/application/api/components/: base.py  error_response.py  health_response.py
src/slackbox/application/api/resources/: health.py  slack.py
src/slackbox/domain/: slack.py
src/slackbox/utils/: identifiers.py  strings.py
tests/: utils.py
tests/component/: conftest.py  test_health.py
tests/integration/: conftest.py  test_resources_health.py
tests/unit/: test_main.py  test_utils.py
tests/unit/application/: test_health.py
tests/unit/application/api/: test_exception_handlers.py  test_resources_health.py  test_response.py
